# hybrid-movie-recsys

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.kaggle/: kaggle.json
config/: config.yml
config/prompts/: explainer.txt  query_parser.txt  reranker.txt
docs/: plan.md
notebooks/: 01_eda_kaggle_datasets.ipynb  02_full_pipeline.ipynb
scripts/: download_kaggle_datasets.py  evaluate.py  evaluate_llm.py  test_api.py  train_hybrid.py
src/api/: main.py  schemas.py
src/data/: dataset.py  kaggle_loader.py  preprocess.py
src/llm/: explainer.py  query_parser.py  qwen_client.py  reranker.py
src/models/cf/: svd.py
src/models/content/: tfidf.py
src/recommender/: hybrid.py
src/utils/: __init__.py  logger.py
tests/: test_models.py
